pkg/front_end/testcases/nnbd/issue49198.dart.weak.transformed.expect
library;
import self as self;
import "dart:core" as core;

static final field core::bool inSoundMode = !(core::_GrowableList::•<core::int?>(0) is core::List<core::int>);
static method main() → dynamic {
  try {
    throw null as dynamic;
  }
  on core::TypeError catch(final core::TypeError e) {
    core::print("${e.{core::Object::runtimeType}{core::Type}}:${e}");
  }
}


Extra constant evaluation status:
Evaluated: AsExpression @ org-dartlang-testcase:///issue49198.dart:9:16 -> NullConstant(null)
Extra constant evaluation: evaluated: 10, effectively constant: 1
